# GlPong

./: CMakeLists.txt
src/: main.cpp
src/includes/: sheader.hpp
src/shaders/: shader0.vert  shader1.vert  shader2.frag  shader2.vert
